# Ai-Career-Hub

./: BACKEND_AUDIT_COMPLETION_REPORT.md  DB_MIGRATION_SUMMARY.md  FRONTEND_BACKEND_FIXES_REPORT.md  MIGRATION_STATUS.md  MYSQL_SETUP.md  README.md  SETUP_DATABASE.md  check_mysql.py  database.sql  fix_charset.py  migrate.py  package-lock.json  package.json  pyrightconfig.json  server_log.txt
app/: globals.css  layout.tsx  page.tsx
backend/: .env  .env.example  __init__.py  ai_career_hub.db  audit_backend.py  check_db.py  check_exp.py  dedup.py  main.py  pyproject.toml  server_log.txt
backend/core/: __init__.py  config.py  database.py  security.py
backend/models/: __init__.py  audit_log.py  certification.py  cover_letter.py  education.py  experience.py  interview.py  job.py  job_match.py  language.py  learning_path.py  notification.py  profile.py  project.py  resume.py  skill.py  subscription.py  target_career.py  user.py  utils.py
backend/routers/: __init__.py  admin.py  ai_analysis.py  auth.py  cover_letters.py  interviews.py  jobs.py  learning_paths.py  notifications.py  onboarding.py  profile.py  resumes.py  skills.py
backend/scripts/: bootstrap_env.ps1  check_db.py  check_mysql_users.py  init_db.py  psql_db_reset.ps1  reset_db.py  sync_db.py  test_postgres_connection.py
backend/services/: __init__.py  ai_service.py
backend/tests/: test_api_smoke.py  test_integration.py
components/: loading-skeleton.tsx  logo.tsx  page-header.tsx  score-ring.tsx  stat-card.tsx  theme-toggle.tsx
hooks/: index.ts  use-auth.ts  use-dashboard.ts
lib/: api-client.ts
(+55 files in other folders)
